--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -1,1 +1,25 @@
-# create your drupal and postgres config here, based off the last assignment
+version: '3'
+
+services:
+  drupal:
+    image: drupal:8.7.8-apache
+    ports: 
+      - '80:80'
+    volumes:
+      - drupal-modules:/var/www/html/modules
+      - drupal-profiles:/var/www/html/profiles       
+      - drupal-sites:/var/www/html/sites      
+      - drupal-themes:/var/www/html/themes
+  postgres:
+    image: postgres:10
+    environment:
+      POSTGRES_PASSWORD: 4rfv$RFV
+    volumes:
+      - drupal-data:/var/lib/postgresql/data
+
+volumes:
+  drupal-data:
+  drupal-modules:
+  drupal-profiles:
+  drupal-sites:
+  drupal-themes:
