--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: postgres
     image: postgres:10
     environment:
-    POSTGRES_PASSWORD: 4rfv$RFV
+      - POSTGRES_PASSWORD: 4rfv$RFV
     volumes:
       - drupal-data:/var/lib/postgresql/data
 
