--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -11,11 +11,12 @@ services:
       - drupal-profiles:/var/www/html/profiles       
       - drupal-sites:/var/www/html/sites      
       - drupal-themes:/var/www/html/themes
+
   postgres:
     container_name: postgres
     image: postgres:10
     environment:
-      - POSTGRES_PASSWORD: 4rfv$RFV
+      - POSTGRES_PASSWORD=4rfv$RFV
     volumes:
       - drupal-data:/var/lib/postgresql/data
 
